# jax_sim_fixed_wing

./: .gitignore  AGENTS.md  BENCHMARKS.md  CLAUDE.md  SPEC.md  pyproject.toml  sim_log.csv  tuned_expert_config.json  tuned_pid_config.json
aero_baseline/: metrics.json  summary.txt
aero_baseline/ail_doublet/: jax_sim.csv  jsbsim.csv
aero_baseline/ail_step_small/: jax_sim.csv  jsbsim.csv
aero_baseline/elev_chirp/: jax_sim.csv  jsbsim.csv
aero_baseline/elev_doublet_lg/: jax_sim.csv  jsbsim.csv
aero_baseline/elev_doublet_sm/: jax_sim.csv  jsbsim.csv
aero_baseline/rud_doublet/: jax_sim.csv  jsbsim.csv
aero_baseline/throttle_step/: jax_sim.csv  jsbsim.csv
aero_baseline/trim_hold/: jax_sim.csv  jsbsim.csv
jax_sim/: __init__.py
jax_sim/controllers/: __init__.py  base.py  cascade_pid.py  pid_gains.py
jax_sim/env/: __init__.py  domain_randomization.py  fixed_wing_target.py  observation.py  reward.py  termination.py  wrappers.py
jax_sim/logging/: __init__.py  csv_logger.py
jax_sim/physics/: __init__.py  aero_segment.py  aerodynamics.py  aircraft.py  constants.py  dataclasses.py  dynamics.py  rigid_body.py  simulator.py  wind.py
jax_sim/rl/: __init__.py  buffers.py  checkpoint.py  config.py  models.py  ppo.py  train.py
jax_sim/utils/: __init__.py  quaternion.py
scripts/: benchmark_env.py  benchmark_expert.py  compare_jsbsim.py  compare_jsbsim_long.py  diagnose_aero_divergence.py  extract_aero_derivs.py  run_sim.py  test_env.py  test_expert.py  test_fixed_wing_tier0.py  test_pid.py  test_wind.py  train_ppo.py  tune_expert.py  tune_pid.py
(+43 files in other folders)
