[project]
name = "jax-sim"
version = "0.1.0"
description = "JAX-based fixed-wing UAV simulation for RL training"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12]>=0.8.2",
    "matplotlib>=3.10.8",
    "pyside6>=6.10.1",
    "numpy",
    "pandas>=2.3.3",
    "tyro>=1.0.3",
    "flax>=0.12.2",
    "tensorboardx>=2.6.4",
]

[project.scripts]
jax-sim = "scripts.run_sim:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jax_sim"]
